--- a/app/src/main/res/layout/weather_row.xml
+++ b/app/src/main/res/layout/weather_row.xml
@@ -13,7 +13,8 @@
         android:layout_rowWeight="1"
         android:layout_columnWeight="1"
         android:gravity="center|fill_vertical"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_marginTop="10dp" />
     <TextView
         android:id="@+id/earthDate_row"
         android:layout_width="0dp"
@@ -22,7 +23,8 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:gravity="center|fill_vertical"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:id="@+id/solHighTemp_row"
@@ -33,7 +35,8 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:gravity="center|fill_vertical"
-        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:textSize="16sp" />
 
     <TextView
@@ -45,6 +48,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:gravity="center|fill_vertical"
-        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:textSize="16sp" />
 </GridLayout>
