--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         android:id="@+id/titleAndDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
         android:gravity="center"
         android:text=""
         android:textSize="30sp"
@@ -59,6 +60,8 @@
         android:id="@+id/buttonContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,25 +73,20 @@
             android:id="@+id/imagesAndVideos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:onClick="onButtonClick"
             android:padding="10dp"
-            android:text="@string/image_and_video_button"
-            android:onClick="onButtonClick" />
+            android:text="@string/image_and_video_button" />
 
-        <Button
-            android:id="@+id/astroids"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/asteroid_button"
-            android:onClick="onButtonClick" />
 
         <Button
             android:id="@+id/marsWeather"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:onClick="onButtonClick"
             android:padding="10dp"
-            android:text="@string/mars_weather_button"
-            android:onClick="onButtonClick" />
+            android:text="@string/mars_weather_button" />
     </LinearLayout>
 
 
