--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,9 +73,9 @@
             android:id="@+id/imagesAndVideos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:onClick="onButtonClick"
-            android:padding="10dp"
+            android:padding="5dp"
             android:text="@string/image_and_video_button" />
 
 
@@ -83,10 +83,18 @@
             android:id="@+id/marsWeather"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:onClick="onButtonClick"
-            android:padding="10dp"
+            android:padding="5dp"
             android:text="@string/mars_weather_button" />
+        <Button
+            android:id="@+id/scavengerHunt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:onClick="onButtonClick"
+            android:padding="5dp"
+            android:text="@string/scavenger_hunt" />
     </LinearLayout>
 
 
