--- a/app/src/main/res/layout/activity_image_and_video.xml
+++ b/app/src/main/res/layout/activity_image_and_video.xml
@@ -1,34 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ImageAndVideoActivity">
-
-
-    <VideoView
-        android:id="@+id/videoView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Search"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -37,10 +11,97 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <GridLayout
+        android:id="@+id/gridLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnCount="3"
+        android:rowCount="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/searchLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_rowWeight=".2"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center|center_vertical"
+            android:text="@string/search_prompt"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/searchInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_rowWeight=".2"
+            android:layout_column="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill_horizontal|center_vertical" />
+
+        <Button
+            android:id="@+id/searchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_rowWeight=".2"
+            android:layout_column="2"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center|center_vertical"
+            android:text="@string/search_button"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/mediaTitleLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_rowWeight=".2"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center|center_vertical"
+            android:text="@string/media_title_label"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/mediaDescLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_rowWeight=".2"
+            android:layout_column="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center|center_vertical"
+            android:text="@string/media_desc_label"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/mediaTypeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_rowWeight=".2"
+            android:layout_column="2"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center|center_vertical"
+            android:text="@string/media_type_label"
+            android:textSize="20sp" />
+
+        <ListView
+            android:id="@+id/listOfResults"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_row="2"
+            android:layout_rowWeight="3"
+            android:layout_column="0"
+            android:layout_columnSpan="3" />
+    </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
