--- a/app/src/main/res/layout/activity_display_media.xml
+++ b/app/src/main/res/layout/activity_display_media.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/background_dark"
+    >
 
     <TextView
         android:id="@+id/mediaTitleDisplay"
@@ -11,6 +13,7 @@
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:padding="10dp"
+        android:textColor="@color/white"
         android:layout_gravity="center"/>
 
     <TextView
@@ -21,6 +24,7 @@
         android:textAlignment="textStart"
         android:textSize="15sp"
         android:padding="10dp"
+        android:textColor="@color/white"
         android:scrollbars="vertical"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
