--- a/app/src/main/res/layout/activity_hunt_page.xml
+++ b/app/src/main/res/layout/activity_hunt_page.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HuntPage">
+    tools:context=".HuntPage"
+    android:background="@android:color/background_dark"
+    >
 
     <TextView
         android:id="@+id/huntText"
@@ -15,6 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:paddingTop="0px"
+        android:textColor="@color/white"
         android:gravity="top"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
