--- a/app/src/main/res/layout/activity_image_and_video.xml
+++ b/app/src/main/res/layout/activity_image_and_video.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@android:color/background_dark"
+    >
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -45,7 +47,9 @@
             android:layout_rowWeight=".2"
             android:layout_column="1"
             android:layout_columnWeight="1"
-            android:layout_gravity="fill_horizontal|center_vertical" />
+            android:layout_gravity="fill_horizontal|center_vertical"
+            android:textColor="@color/white"
+            />
 
         <Button
             android:id="@+id/searchButton"
@@ -69,7 +73,9 @@
             android:layout_columnWeight="1"
             android:layout_gravity="center|center_vertical"
             android:text="@string/media_title_label"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            />
 
         <TextView
             android:id="@+id/mediaDescLabel"
@@ -81,6 +87,7 @@
             android:layout_columnWeight="1"
             android:layout_gravity="center|center_vertical"
             android:text="@string/media_desc_label"
+            android:textColor="@color/white"
             android:textSize="20sp" />
 
         <TextView
@@ -93,6 +100,7 @@
             android:layout_columnWeight="1"
             android:layout_gravity="center|center_vertical"
             android:text="@string/media_type_label"
+            android:textColor="@color/white"
             android:textSize="20sp" />
 
         <ListView
