--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@android:color/background_dark"
+    >
 
 
     <ProgressBar
@@ -54,7 +56,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/photoOfTheDay" />
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/photoOfTheDay"
+        />
 
     <LinearLayout
         android:id="@+id/buttonContainer"
