--- a/app/src/main/res/layout/nasa_media_row.xml
+++ b/app/src/main/res/layout/nasa_media_row.xml
@@ -10,7 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textAlignment="center"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:background="@android:color/background_dark"
+        android:textColor="@color/white"
+        />
 
     <TextView
         android:id="@+id/media_desc"
@@ -18,7 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:textAlignment="center"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textColor="@color/white"
+        />
 
     <TextView
         android:id="@+id/media_type"
@@ -26,5 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textAlignment="center"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textColor="@color/white"
+        />
 </LinearLayout>
