--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#1A237E</color>
+    <color name="colorAccent">#304FFE</color>
 
     <color name="redish">#F2808A</color>
     <color name="pink">#F294C0</color>
     <color name="navy">#344859</color>
     <color name="cyan">#79E6F2</color>
     <color name="yelloworange">#F2AC29</color>
+    <color name="white">#ffffff</color>
 </resources>
