--- a/app/src/main/res/layout/activity_display_media.xml
+++ b/app/src/main/res/layout/activity_display_media.xml
@@ -25,7 +25,7 @@
         android:textSize="15sp"
         android:padding="10dp"
         android:textColor="@color/white"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"/>`
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
